name:                ef-hb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hendriklammers/ef-hb#readme
license:             MIT
license-file:        LICENSE
author:              Hendrik Lammers
maintainer:          lammers@gmail.com
copyright:           MIT
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ef-hb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
